added some notes

--- a/notebooks/modeling.ipynb
+++ b/notebooks/modeling.ipynb
@@ -10679,9 +10679,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## EDA of Important Features\n",
-    "\n",
-    "Make lots of plots: Scatter and histogram for each of the important variable against saleprice"
+    "## EDA of Important Features"
    ]
   },
   {
@@ -10732,6 +10730,22 @@
    "source": [
     "fi = rf_feature_importances(model, trainX)\n",
     "plot_fi(fi);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Feature importances didn't change much, but there seems to have been some colinearity that I was able to remove. There are few features that have relatively high importance. These features seem to have lot to do with quality and size of different parts of houses which makes sense.\n",
+    "\n",
+    "Biased approach, as it has a tendency to inflate the importance of continuous features or high-cardinality categorical variables!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Correlation matrix, Scatter plots with feature and SalePrice, distributions of feature values"
    ]
   },
   {
